2004-03-07  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b112

 	* Recommit of ImageTools.jar (same as 1.4.2-cvs-b73, which apparently
	  was the wrong version of the jar).  Namely: no code changes, but the
	  code is now compiled under jdk1.1 for broader compatibility
	  (specifically it now works with the MS Java VM that comes with
	  Windows XP)

2004-03-05  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b111

	* Bug 847194: Allow "0000" as an itemCaptureDate
	  Clarified allows date ranges (1970-2069), and details for
	  two digit date remapping

2004-03-05  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b110

	* Bugfix 909453: updated image frame html to resize frame with its
	  content allowing image frames to be used with fit-to-window.

2004-03-05  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b109

	* Fixed play button in low-tech slideshow.

	* Bugfix 842224: adhere to slideshow-length setting in low-tech.

2004-03-05  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b108

	* Change: Fixed session state bug in slideshow.  If $gallery->album
	  wasn't set, an error occured when trying to call class functions

2004-03-05 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b107
	
	* Change: Replaced table in adminAlbumCommands with a div.

2004-03-05  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b106

	* Change: Stage 2 of a fix for bug 903936 -
	  1. Changing all non-AlbumItem references to AlbumItem::isAlbumName
	     to getAlbumName()
	  2. Implement isAlbum() in if blocks where determination of an album
	     is made

2004-03-04  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b105

	* Change: Stage 1 of a fix for bug 903936 -
          1. Changing all calls to isAlbumName() into getAlbumName()
          2. Addition of the isAlbum() function to the Album class

2004-03-04  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b104

	* Updated frame layout so TT/BB (top/bottom) images are repeated