@@ -1,3 +1,11 @@
+2004-03-13  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b113
+
+	* Bug 906018: Don't create a .sized. image if the requested
+	  target is larger than the original image.
+
+	* Bug 911617: When resizing images, if the target size is
+	  larger than the original, and a .sized. exists, remove it.
+
 2004-03-07  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b112
 
  	* Recommit of ImageTools.jar (same as 1.4.2-cvs-b73, which apparently
